<resources>
    <string name="app_name">Luận văn</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_history">Lịch sử</string>
    <string name="nav_order">Đơn hàng</string>
    <string name="nav_job">Công việc</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_list">Đơn hàng</string>
    <string name="nav_category">Danh mục</string>
    <string name="nav_category_admin">Quản lý Danh mục</string>
    <string name="nav_more">Tùy chọn</string>
    <string name="cart">Giỏ hàng</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="hint_email">Nhập email của bạn</string>
    <string name="hint_password">Nhập mật khẩu của bạn</string>
    <string name="login">Đăng nhập</string>
    <string name="login_title">Đăng nhập tài khoản</string>
    <string name="msg_login_error">Đăng nhập lỗi, kiểm tra lại email hoặc mật khẩu!!</string>
    <string name="register">Đăng ký</string>
    <string name="register_title">Đăng ký tài khoản</string>
    <string name="register_succesfully">Đăng ký tài khoản thành công</string>
    <string name="register_faild">Đăng ký tài khoản thất bại</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="have_not_account">Chưa có tài khoản?</string>
    <string name="have_account">Đã có tài khoản?</string>
    <string name="msg_email_require">Vui lòng nhập email của bạn</string>
    <string name="msg_password_require">Vui lòng nhập mật khẩu của bạn</string>
    <string name="msg_email_invalid">Email của bạn không hợp lệ</string>
    <string name="msg_waiting_message">Vui lòng đợi...</string>
    <string name="msg_register_error">Đăng ký không thành công, vui lòng thử lại</string>
    <string name="msg_email_not_registered">Email chưa được dùng để đăng ký!</string>
    <string name="msg_check_email_error">Kiểm tra email thất bại!</string>
    <string name="msg_reset_password_successfully">Lấy lại mật khẩu thành công, vui lòng kiểm tra email của bạn.</string>
    <string name="msg_reset_password_error">Lỗi!! không thể lấy lại mật khẩu.</string>
    <string name="action_ok">Đồng ý</string>
    <string name="label_select_location">Nhấn vào để thêm địa chỉ</string>
    <string name="reset_password">Gửi lại mật khẩu</string>
    <string name="tech_management">Quản lý kỹ thuật viên</string>
    <string name="cust_management">Quản lý khách hàng</string>
    <string name="admin_management">Quản lý quản trị viên</string>
    <string name="payment_management">Quản lý phương thức thanh toán</string>
    <string name="msg_old_password_require">Vui lòng nhập mật khẩu cũ</string>
    <string name="msg_new_password_require">Vui lòng nhập mật khẩu mới</string>
    <string name="msg_confirm_password_require">Vui lòng xác nhận mật khẩu mới</string>
    <string name="msg_confirm_password_invalid">Vui lòng xác nhận mật khẩu mới</string>
    <string name="msg_new_password_invalid">Mật khẩu mới phải khác mật khẩu cũ</string>
    <string name="msg_password_changed_success">Đổi mật khẩu thành công</string>
    <string name="msg_password_change_failed">Đổi mật khẩu thất bại</string>
    <string name="msg_old_password_invalid">Xác thực mật khẩu cũ thất bại, mật khẩu cũ không đúng!!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_user_name">Email</string>
    <string name="label_process">Đang xử lý</string>
    <string name="label_done">Hoàn thành</string>
    <string name="label_cancel">Hủy đơn</string>
    <string name="feedback">Phản hồi</string>
    <string name="view_feedback">Xem phản hồi</string>
    <string name="send_feedback">Gửi phản hồi</string>
    <string name="feedback_comment">Nội dung(*)</string>
    <string name="feedback_rating">Đánh giá của bạn</string>
    <string name="comment_require">Vui lòng nhập nội dung!!</string>
    <string name="send_feedback_success">Đã gửi Feedback thành công!</string>
    <string name="send_feedback_fail">Gửi Feedback không thành công!</string>
    <string name="contact">Liên hệ</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="confirm_exit_app">Bạn có muốn thoát ứng dụng?</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Hủy</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="skip">Bỏ qua</string>
    <string name="next">Kế tiếp</string>
    <string name="confirm_sign_out">Bạn có muốn đăng xuất?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_home_search">Bạn muốn tìm gì?</string>
    <string name="select_date">Chọn ngày cần tìm?</string>
    <string name="label_address">Chọn địa chỉ (*)</string>
    <string name="label_notes">Mô tả tình trạng (*)</string>
    <string name="label_notes2">Dặn dò</string>
    <string name="label_select_device_brand">Chọn thương hiệu của thiết bị (*)</string>
    <string name="label_select_technicain">Phân công kỹ thuật viên</string>
    <string name="brand_customize">Tùy chọn nhãn hiệu</string>
    <string name="hint_optional">Mô tả tình trạng thiết bị của bạn (Bắt buộc).</string>
    <string name="hint_optional2">Dặn dò kỹ thuật viên nếu cần.</string>
    <string name="label_total">Thành tiền (Chưa bao gồm chi phí thiết bị thay thế)</string>
    <string name="label_warning">Kiểm tra và phân công kỹ thuật viên phù hợp!!</string>
    <string name="label_order">Đặt hàng</string>
    <string name="label_success">Thành công</string>
    <string name="select_role">Lựa chọn đối tượng</string>
    <string name="customer">Khách hàng</string>
    <string name="technician">Kỹ thuật viên</string>
    <string name="admin">Quản trị viên</string>
    <string name="complete_profile_title">Điền thông tin cá nhân</string>
    <string name="name">Họ và tên</string>
    <string name="hint_name">Nhập họ và tên của bạn</string>
    <string name="phone">Số điện thoại</string>
    <string name="hint_phone">Nhập số điện thoại của bạn</string>
    <string name="address">Địa chỉ</string>
    <string name="description">Mô tả</string>
    <string name="hint_address">Nhập địa chỉ của bạn</string>
    <string name="hint_description">Nhập mô tả về khả năng của bạn</string>
    <string name="complete">Hoàn tất</string>
    <string name="default_name">user name</string>
    <string name="edit_avatar">Đổi ảnh</string>
    <string name="delete_avatar">Xóa ảnh</string>
    <string name="save">Lưu</string>
    <string name="user_info_title">Thông tin người dùng</string>
    <string name="default_phone">không có</string>
    <string name="default_address">không có</string>
    <string name="label_old_password">Mật khẩu cũ</string>
    <string name="hint_password_old">Vui lòng nhập mật khẩu cũ...</string>
    <string name="label_new_password">Mật khẩu mới</string>
    <string name="hint_password_new">Vui lòng nhập mật khẩu mới...</string>
    <string name="label_confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="hint_password_confirm">Vui lòng xác nhận mật khẩu mới...</string>
    <string name="label_created_at">Tạo lúc:</string>
    <string name="label_updated_at">Cập nhật lúc:</string>
    <string name="label_name_customer">Tên khách hàng:</string>
    <string name="label_phone_customer">Số điện thoại khách hàng:</string>
    <string name="label_address_customer">Địa chỉ khách hàng:</string>
    <string name="label_waiting_order">Đang chờ nhận đơn</string>
    <string name="label_takes_order">Đã nhận đơn và phân công kỹ thuật viên</string>
    <string name="label_order_complete">Đơn hàng của bạn đã hoàn tất và đang giao</string>
    <string name="cancel_order">Hủy đơn</string>
    <string name="label_receipt_order">Hóa đơn</string>
    <string name="label_bill">Vui lòng kiểm tra thông tin trước khi thanh toán!!</string>
    <string name="label_description">Mô tả tình trạng: </string>
    <string name="label_note">Ghi chú: </string>
    <string name="label_addr">Địa chỉ giao hàng: </string>
    <string name="label_take_order">Thanh toán</string>
    <string name="label_tracking_order">Theo dõi đơn hàng</string>
    <string name="label_list_device">Danh sách thiết bị của</string>
    <string name="label_tracking_tech_order">Thông tin đơn hàng</string>
    <string name="label_total_price">Tổng tiền: </string>
    <string name="label_customer_name">Khách hàng: </string>
    <string name="label_technician_name">Kỹ thuật viên: </string>
    <string name="label_package_price">Giá gói: </string>
    <string name="label_name_package">Tên gói </string>
    <string name="label_name_technician">Tên kỹ thuật viên </string>
    <string name="label_repaired_items">Danh sách các thiết bị đã thay thế/sửa chữa</string>
    <string name="label_payment_summary">Thanh toán</string>
    <string name="label_thank_you">Cảm ơn bạn!</string>
    <string name="label_your_transaction_success">Giao dịch của bạn đã thành công</string>
    <string name="label_id_transaction">Mã đơn hàng</string>
    <string name="label_date_and_time">Thời gian</string>
    <string name="label_payment_method">Phương thức thanh toán:</string>
    <string name="infor_title">Thông tin khách hàng</string>
    <string name="infor_contact">Liên hệ</string>
    <string name="Dont_have_any_order_yet">Không có đơn hàng</string>


    <!-- Bottom sheet    -->
    <string name="option_one">Quản lý kỹ thuật viên</string>
    <string name="option_two">Quản lý khách hàng</string>
    <string name="option_three">Quản lý Banner</string>
    <string name="option_four">Quản lý quản trị viên</string>
    <string name="option_five">Quản lý phương thức thanh toán</string>


    <!-- String array    -->
    <string-array name="brands">
        <item>Chọn thương hiệu</item>
        <item>Samsung</item>
        <item>LG</item>
        <item>Panasonic</item>
        <item>Sony</item>
        <item>Toshiba</item>
        <item>Sharp</item>
        <item>Khác</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>


</resources>