<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.CompleteProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_profile_title"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="@color/textColorHeading"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="14dp"
            android:textColor="@color/textColorHeading"
            android:textColorHint="@color/textColorAccent"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/phone"
            android:textStyle="bold"
            android:textColor="@color/textColorHeading"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:padding="14dp"
            android:textColor="@color/textColorHeading"
            android:textColorHint="@color/textColorAccent"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/address"
            android:textStyle="bold"
            android:textColor="@color/textColorHeading"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_address"
            android:imeOptions="actionDone"
            android:inputType="textPostalAddress"
            android:padding="14dp"
            android:textColor="@color/textColorHeading"
            android:textColorHint="@color/textColorAccent"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btn_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button_disable_corner_16"
            android:text="@string/complete"
            android:textAllCaps="false"
            android:textColor="@color/white"

            android:textSize="14sp" />

    </LinearLayout>


</RelativeLayout>